2005-07-14  Frank Ch. Eigler  <fche@redhat.com>

	* builtin_functions.h (printk): Use explicit format string.

2005-07-11  Graydon Hoare  <graydon@redhat.com>

	* builtin_functions.h: New file.

2005-07-10  Martin Hunt  <hunt@redhat.com>

	* runtime.h (init_module): Fix return value.

2005-07-08  Martin Hunt  <hunt@redhat.com>

	* runtime.h: Move some common pieces of modules into this file.
	Includes MODULE_LICENSE, cleanup_module and init_module.

	* print.c (_stp_print_flush): Rename "t" to "_stp_tport".

	* io.c (_stp_vlog): Ditto.

2005-07-01  Martin Hunt  <hunt@redhat.com>

	* string.c (_stp_string_init): CAll stp_error() on bad
	init.

	* list.c (_stp_list_clear): Call _stp_warn().

	* probes.c: Convert all _stp_log() calls to either stp_warn() or
	dbug().
	
	* print.c: Comment out dbug()s.	

	* stat-common.c: Comment out dbug()s.		
	
	* map.c (_stp_map_new): Call _stp_error() on a bad map type.
	Comment out dbug()s.

	* map-stat.c (_stp_map_new_hstat_log): Call _stp_warn().
	(_stp_map_new_hstat_linear): Ditto.

	* map-int.c: Comment out dbug()s.

	* map-str.c: Comment out dbug()s.
	
	* map-keys.c: Use _stp_warn().  Comment out dbug()s.
	
	* alloc.c (_stp_alloc): Call _stp_error().
	(_stp_valloc): Ditto.

	* io.c (_stp_warn): New function.
	(_stp_exit): New function.
	(_stp_error): New function.
	(_stp_dbug): New function.

	* runtime.h (dbug): Call _stp_dbug() if	DEBUG is defined.
	
2005-06-29  Martin Hunt  <hunt@redhat.com>

	* map-values.c (_stp_map_add_int64): Fix docs.
	* map-str.c: Fix some docs
	* map.c: Ditto.
	* map.doc: Ditto.

	* current.c (_stp_ret_addr_r): New function.
	(_stp_probe_addr): New function.
	(_stp_probe_addr_r): New function.

2005-06-27  Martin Hunt  <hunt@redhat.com>

	* Doxyfile (PREDEFINED): Added USE_RET_PROBES.

	* probes.c (_stp_register_kretprobes): New function.
	(_stp_unregister_kretprobes): New function.

2005-06-20  Tom Zanussi  <zanussi@us.ibm.com>

	* print.c: Made relayfs _stp_print_flush() use sequence counter.
	