@@ -1,3 +1,8 @@
+2005-07-19  Martin Hunt  <hunt@redhat.com>
+
+	* print.c (_stp_print_flush): Check return value and increment
+	transport failures.
+
 2005-07-14  Frank Ch. Eigler  <fche@redhat.com>
 
 	* builtin_functions.h (printk): Use explicit format string.
